--- a/frontend/src/metabase/css/components/buttons.css
+++ b/frontend/src/metabase/css/components/buttons.css
@@ -1,6 +1,6 @@
 :root {
   --default-button-border-radius: 4px;
-  --default-button-border-color: #b9b9b9;
+  --default-button-border-color: #BDC3C7;
   --default-button-background-color: #fff;
 
   --primary-button-border-color: #509ee3;
