--- a/frontend/src/metabase/css/core/base.css
+++ b/frontend/src/metabase/css/core/base.css
@@ -1,7 +1,7 @@
 :root {
-  --default-font-family: "Lato";
+  --default-font-family: "Segoe UI";
   --default-font-size: 0.875em;
-  --default-font-color: #727479;
+  --default-font-color: #444444;
 }
 
 html {
