--- a/src/metabase/email/new_user_invite.mustache
+++ b/src/metabase/email/new_user_invite.mustache
@@ -6,7 +6,7 @@
 
     </div>
     <div style="max-width: 450px; margin-left: auto; margin-right: auto; line-height: 1.2rem;">
-      <p>Softheon Foundtry is a simple and powerful analytics tool which lets <b>anyone</b> learn and <b>make decisions</b> from their company's data.</p>
+      <p>Softheon Foundry is a simple and powerful analytics tool which lets <b>anyone</b> learn and <b>make decisions</b> from their company's data.</p>
       <p>No technical knowledge required!</p>
     </div>
     <div style="padding: 1em 0 1em 0;">
