--- a/src/metabase/email/new_user_invite.mustache
+++ b/src/metabase/email/new_user_invite.mustache
@@ -5,11 +5,11 @@
     </div>
 
     </div>
-    <div style="max-width: 450px; margin-left: auto; margin-right: auto; line-height: 1.2rem;">
+    <div style="max-width: 450px; margin-left: auto; margin-right: auto; line-height: 1.2rem; text-align: center;">
       <p>Softheon Foundry is a simple and powerful analytics tool which lets <b>anyone</b> learn and <b>make decisions</b> from their company's data.</p>
       <p>No technical knowledge required!</p>
     </div>
-    <div style="padding: 1em 0 1em 0;">
+    <div style="padding: 1em 0 1em 0; text-align: center;">
       <a style="display: inline-block; box-sizing: border-box; text-decoration: none; font-size: 1.063rem; padding: 0.8rem 2.25rem; background: #FBFCFD; border: 1px solid #ddd; color: #444; cursor: pointer; text-decoration: none; font-weight: bold; border-radius: 4px; background-color: #4990E2; border-color: #4990E2; color: #fff;" href="{{joinUrl}}">Join now</a>
     </div>
   </div>
