--- a/frontend/src/metabase/components/LoadingSpinner.css
+++ b/frontend/src/metabase/components/LoadingSpinner.css
@@ -27,6 +27,12 @@
   left: -4px;
 }
 
+.overlay-center-spinner {
+  position: absolute;
+  z-index: 322;
+  height: 100%;
+}
+
 @keyframes LoadingSpinner-transition {
   from {
     transform: rotate(0deg);
