added autocomplete input on the collection page

--- a/frontend/src/metabase/questions/components/List.css
+++ b/frontend/src/metabase/questions/components/List.css
@@ -31,6 +31,20 @@
   padding-bottom: 20px;
   border-color: #edf5fb;
 }
+:local(.suggestionItem) {
+
+  composes: flex align-center from "style";
+  composes: relative from "style";
+  padding-top: 6px;
+  padding-bottom: 6px;
+  border-color: #edf5fb;
+}
+
+:local(.suggestionItemTitle) {
+  composes: text-bold from "style";
+  color: var(--title-color);
+  font-size: 16px
+}
 
 :local(.itemBody) {
   composes: flex-full from "style";
