--- a/frontend/src/metabase/questions/components/theme.css
+++ b/frontend/src/metabase/questions/components/theme.css
@@ -34,23 +34,22 @@
 .react-autosuggest__suggestions-container--open {
   display: block;
   position: absolute;
-  top: 51px;
-  border: 1px solid #aaa;
+  top: 49px;
+  border: 0px solid #aaa;
   background-color: #fff;
   font-family: "Open Sans", sans-serif;
   font-weight: 16px;
   font-size: 16px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  z-index: 2;
+  z-index: 3;
   max-height: 500px;
   border: none;
   -webkit-box-shadow: 0 10px 6px -6px #777;
   -moz-box-shadow: 0 10px 6px -6px #777;
   box-shadow: 0 10px 6px -6px #777;
   overflow-y: auto;
-  margin-left: 2px;
-  margin-right: 2px;
+  width: 550px;
 }
 
 .react-autosuggest__suggestions-list {
