Use local logo icons.

--- a/src/metabase/email/_footer_pulse.mustache
+++ b/src/metabase/email/_footer_pulse.mustache
@@ -4,7 +4,7 @@
   {{/quotation}}
   {{#logoFooter}}
     <div style="padding-bottom: 2em; padding-top: 1em; padding-left: 16px; text-align: left;">
-      <img width="32" height="40" src="https://www.softheon.com/HTMLCache/Resources/64x64-logo-01.png"/>
+      <img width="32" height="40" src="cid:12" style="display:block; margin-left:auto; margin-right:auto;"/>
     </div>
   {{/logoFooter}}
 </body>
